...
                                                                                <action selector="call:" destination="LGP-gS-mDC" eventType="touchUpInside" id="OXf-8c-qPb"/>
                                                                            </connections>
                                                                        </button>
                                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZYa-YM-bry" userLabel="Directions" customClass="CustomButton" customModule="Youse_Auto" customModulePro
                                                                            <rect key="frame" x="177.66666666666663" y="0.0" width="167.33333333333337" height="35"/>
                                                                            <color key="backgroundColor" red="0.0" green="0.3294117647" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                            <accessibility key="accessibilityConfiguration" identifier="directions_button" label="DirectionsButton"/>
                                                                            <state key="normal" title="Title"/>
                                                                            <userDefinedRuntimeAttributes>
                                                                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                                                    <real key="value" value="16"/>
                                                                                </userDefinedRuntimeAttribute>
                                                                                <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
...
                                                <constraint firstItem="bvp-Wt-oFz" firstAttribute="leading" secondItem="pYq-kf-UrF" secondAttribute="leading" constant="5" id="euf-Ks-iWF"/>
                                                <constraint firstAttribute="trailing" secondItem="bvp-Wt-oFz" secondAttribute="trailing" constant="5" id="oGJ-4g-mXJ"/>
                                                <constraint firstAttribute="bottom" secondItem="bvp-Wt-oFz" secondAttribute="bottom" constant="5" id="tEO-Gq-Wzd"/>
                                            </constraints>
                                        </tableViewCellContentView>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="details_cell" label="DetailsCell">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                        <connections>
                                            <outlet property="availabilityLabel" destination="YA5-ES-ot7" id="OQG-Gh-1hu"/>
                                            <outlet property="callButton" destination="1e5-zi-XSU" id="4f2-V2-xBD"/>
                                            <outlet property="directionsButton" destination="ZYa-YM-bry" id="U78-8F-erb"/>
...
                                                <constraint firstItem="to5-bh-SqU" firstAttribute="leading" secondItem="1Ko-4X-mKd" secondAttribute="leading" constant="5" id="FOY-aW-blC"/>
                                                <constraint firstAttribute="trailing" secondItem="to5-bh-SqU" secondAttribute="trailing" constant="5" id="YoI-ST-K3L"/>
                                                <constraint firstItem="to5-bh-SqU" firstAttribute="top" secondItem="1Ko-4X-mKd" secondAttribute="top" constant="5" id="ugg-jh-RFZ"/>
                                            </constraints>
                                        </tableViewCellContentView>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="contact_info_cell" label="ContactInfoCell">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                        <connections>
                                            <outlet property="contentLabel" destination="XmF-dQ-IHH" id="HQW-t1-U6P"/>
                                            <outlet property="iconImageView" destination="RnX-8h-VK7" id="JQe-ue-mbU"/>
                                            <outlet property="titleLabel" destination="ngN-3D-ifN" id="bs8-K8-TI4"/>
...
                                                <constraint firstItem="gh9-Aa-vLq" firstAttribute="leading" secondItem="VZh-RP-VwW" secondAttribute="leading" constant="5" id="OgD-6T-reP"/>
                                                <constraint firstAttribute="bottom" secondItem="gh9-Aa-vLq" secondAttribute="bottom" constant="5" id="Tx2-Ky-U7I"/>
                                                <constraint firstAttribute="trailing" secondItem="gh9-Aa-vLq" secondAttribute="trailing" constant="5" id="yFR-EF-JaN"/>
                                            </constraints>
                                        </tableViewCellContentView>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="review_cell" label="ReviewCell">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                        <connections>
                                            <outlet property="contentLabel" destination="7L5-eN-jaK" id="0pk-gG-nTF"/>
                                            <outlet property="nameLabel" destination="W4X-XG-Amk" id="A0t-0Q-QYi"/>
                                            <outlet property="profileImageView" destination="YQQ-Yr-8I7" id="S9O-C9-eK1"/>
...
