...
		
		case urlScheme(AppInfo)
        
		typealias AppInfo = (name: String, url: String, path: String)
		
		struct App {
			static let apple = Navigator.urlScheme((name: "Apple Maps", url: "http://maps.apple.com/", path: "?daddr="))
			static let googleMaps = Navigator.urlScheme((name: "Google Maps", url: "http://maps.google.com/maps/", path: "?daddr="))
			
			static let all = [apple, googleMaps]
		}
        
        //*************************************************
        // MARK: - Public Properties
...
