...
                                                <constraint firstItem="2ip-bp-Zle" firstAttribute="leading" secondItem="l8z-If-mdy" secondAttribute="leading" constant="15" id="3GK-If-pxJ"/>
                                                <constraint firstAttribute="trailing" secondItem="2ip-bp-Zle" secondAttribute="trailing" constant="15" id="EKd-vT-8nV"/>
                                                <constraint firstItem="2ip-bp-Zle" firstAttribute="top" secondItem="l8z-If-mdy" secondAttribute="top" constant="10" id="OCl-KK-jFp"/>
                                                <constraint firstAttribute="bottom" secondItem="2ip-bp-Zle" secondAttribute="bottom" constant="10" id="PuF-iV-obP"/>
                                            </constraints>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" identifier="car_repair_cell" label="CarRepairCell">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                        <connections>
                                            <outlet property="addressLabel" destination="kw3-E8-pK9" id="hcP-lS-kI5"/>
                                            <outlet property="availabilityLabel" destination="bXe-RL-2rw" id="2aQ-8V-7ol"/>
                                            <outlet property="customImageView" destination="31T-aV-CA6" id="xXJ-8j-heH"/>
...
